# bamboozle-snake

./: .gitignore  LICENSE  README.md
bamboozle_snake/: Cargo.toml  games.json
bamboozle_snake/benches/: benchmark.rs
bamboozle_snake/src/: game.rs  grid.rs  lib.rs  logic.rs  main.rs
bamboozle_snake/src/heuristic/: constrictor.rs  duels.rs  floodfill.rs  mod.rs  royale.rs  royale_duels.rs  standard.rs
bamboozle_snake/src/simulation/: cell.rs  mod.rs  outcome.rs  snake.rs  state.rs
bamboozle_snake/src/tree/: action_set_matrix.rs  alphabeta.rs  alphabeta_multithread.rs  iterative_deepening.rs  maxn.rs  minimax.rs  mod.rs  monte_carlo.rs  node.rs  prob_maxn.rs
optim/: game.py  heuristic.py  main.py  main_continue.py  population.py  snake.py
