[package]
name = "bamboozle_snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
itertools = "0.10.5"
rayon = "1.6.1"
warp = "0.3.5"
yansi = "0.5.1"
clap = { version = "4.1.4", features = ["derive"]}
tui = "0.19"
crossterm = "0.26.1"
once_cell = "1.17.1"


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
lto = true
debug = true

[profile.bench]
opt-level = 3
lto = true